.helm/test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prod
  name: srm-dex-fe-frontend-main
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
      - bx.app
    secretName: srm-dex-fe-frontend-main-tls
  rules:
    - host: bx.app
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: srm-dex-fe-frontend-main
              port: 
                number: 80
